Added a remove button for draft courses